2011-07-17 Borut Razem <borut.razem AT gmail.com>

	* bin/dcf.sh: added debug_exec() function

2011-07-15 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gputils/Makefile: build gputils from svn HEAD
	* packages/build.stx-btree/Makefile: updated stx-btree to version 0.8.6
	* packages/build.mingw32/Makefile: updated to gcc 4.6.1
	* packages/build.boost/Makefile: updated to boost 1_47_0

2011-06-12 Borut Razem <borut.razem AT gmail.com>

	* crontab.txt: redirect curl stderr to /dev/null

2011-05-22 Borut Razem <borut.razem AT gmail.com>

	* crontab.txt: added the regression tests database update

2011-05-02 Borut Razem <borut.razem AT gmail.com>

	* packages/build.stx-btree/*: added stx-btree package

2011-04-24 Borut Razem <borut.razem AT gmail.com>

	* .sdcc_builder/profile: use `` instead of $()

2011-04-23 Borut Razem <borut.razem AT gmail.com>

	* packages/build.rsync/Makefile: resync version 3.0.8
	* .sdcc_builder/profile: added /opt/solstudio12.2/bin to path

2011-04-11 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gcc/Makefile, packages/build.gmp_mpfr/Makefile:
	  force 32 bit compiltion on Solaris

2011-04-10 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gcc/Makefile: added

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* packages/build.mingw32/Makefile, packages/build.gmp_mpfr/Makefile:
	  updated to gcc 4.6.0, binutils 2.21, w32api 3.17-2, mpfr 3.0.1

2011-03-13 Borut Razem <borut.razem AT gmail.com>

	* packages/build.boost/Makefile: fixed boost installation on Solaris:
	  define INCLUDES_ONLY on Solaris due a compiler bug;
	  see http://forums.oracle.com/forums/thread.jspa?threadID=2158828&tstart=30

2011-03-03 Borut Razem <borut.razem AT gmail.com>

	* .sdcc_builder/profile: fixed dos utils aliases on Solaris

2011-02-06 Borut Razem <borut.razem AT gmail.com>

	* packages/build.ncurses/Makefile: tab indentation
	  packages/build.boost, packages/build.boost/download,
	  packages/build.boost/Makefile: added
